# tlox

./: README.md  circle.lox  classes.lox  negate.lox  pom.xml  string-test.lox  test.lox
cloc/: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  fib.lox  fun.lox  main.c
cloc/include/: ast.h  cfg.h  chunk.h  cloc.h  common.h  compiler.h  memory.h  object.h  scanner.h  table.h  value.h  vm.h
cloc/loxScripts/: array.lox  ast.lox  benchmarkClosure.lox  classes.lox  consts.lox  continue.lox  increment-decrement.lox  parse-example.lox  test.lox  testIO.lox
cloc/src/: CMakeLists.txt  Makefile  ast.c  cfg.c  chunk.c  cmake_install.cmake  codegen.c  compiler.c  debug.c  lox_array.c  memory.c  object.c  scanner.c  table.c  value.c  vm.c
cloc/tests/: Makefile  check_cloc.c  cmake_install.cmake
jloc/: .project  README.md  classes.lox  fib.lox
tlox/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  inheritance-attempt.diff
tlox/c-tests/: CMakeLists.txt  Makefile  check_cloc  check_cloc.c  cmake_install.cmake
tlox/c-tests/testCases/: arrays.lox  computedProperties.lox  simpleInheritance.lox
tlox/c-tests/testCases/errors/: const.lox  duplicateConst.lox
tlox/cmake/: config.h.in
tlox/e2e-tests/: test.py  unexpected_character.lox
tlox/include/: ast.h  cfg.h  cloc.h  codegen.h  common.h  compiler.h  debug.h  execution_context.h  linked_list.h  lox_array.h  object.h  parser.h  scanner.h  scope.h  semantic.h  symbol_table.h  table.h  token.h  util.h  value.h  vm.h
tlox/loxScripts/: add.lox  and.lox  assign.lox  ast.lox  binary.lox  block.lox  block_const.lox  classes.lox  coffee.lox  for.lox  fun.lox  globalSetGet.lox  ipBenchmark.lox  localClass.lox  methodCall.lox  negate.lox  (+14 more)
tlox/src/: CMakeLists.txt  Makefile  ast.c  cfg.c  chunk.c  cmake_install.cmake  codegen.c  compiler.c  debug.c  execution_context.c  linked_list.c  lox_array.c  memory.c  object.c  parser.c  scanner.c  scope.c  semantic.c  symbol_table.c  table.c  util.c  value.c  vm.c
(+123 files in other folders)
